@@ -1,6 +1,9 @@
 # ChangeLog for sci-biology/treeviewx
-# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-biology/treeviewx/ChangeLog,v 1.13 2005/12/13 20:38:01 ribosome Exp $
+# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sci-biology/treeviewx/ChangeLog,v 1.14 2006/04/01 16:09:10 deltacow Exp $
+
+  01 Apr 2006; Scott Stoddard <deltacow@gentoo.org> treeviewx-0.5.1.ebuild:
+  Added ~amd64. (bug #128237)
 
   13 Dec 2005; Olivier Fisette <ribosome@gentoo.org> -treeviewx-0.5.ebuild,
   treeviewx-0.5.1.ebuild:
